--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^4.7.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc & node out/test.js"
   },
   "author": "",
   "license": "ISC"
